--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label id="name" type="text" minlength="3" maxlength="50" required>Name</label>
+		<input for="name">
+		<label id="portfolio" type="url" required>Portfolio</label>
+		<input for="portfolio">
+		<label id="favColor" type="color">Favorite Color</label>
+		<input for="favColor">
+		<label id="likeness" type="range" min="1" max="100">Likeness</label>
+		<input for="likeness">
+	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
