--- a/main.html
+++ b/main.html
@@ -8,15 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
 	<form method="post">
-		<label id="name" type="text" minlength="3" maxlength="50" required>Name</label>
-		<input for="name">
-		<label id="portfolio" type="url" required>Portfolio</label>
-		<input for="portfolio">
-		<label id="favColor" type="color">Favorite Color</label>
-		<input for="favColor">
-		<label id="likeness" type="range" min="1" max="100">Likeness</label>
-		<input for="likeness">
+		<label for="name" type="text" minlength="3" maxlength="50" required>Name</label>
+		<input id="name"><br>
+		<label for="portfolio" type="url" required>Portfolio</label>
+		<input id="portfolio"><br>
+		<label for="favColor" type="color">Favorite Color</label>
+		<input id="favColor"><br>
+		<label for="likeness" type="range" min="1" max="100">Likeness</label>
+		<input id="likeness">
 	</form>
 	
     <script type="text/javascript" src="./script.js">
