--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
 	<form method="post">
-		<label for="name" type="text" minlength="3" maxlength="50" required>Name</label>
-		<input id="name"><br>
-		<label for="portfolio" type="url" required>Portfolio</label>
-		<input id="portfolio"><br>
-		<label for="favColor" type="color">Favorite Color</label>
-		<input id="favColor"><br>
-		<label for="likeness" type="range" min="1" max="100">Likeness</label>
-		<input id="likeness">
+		<label for="name"  >Name</label>
+		<input id="name" type="text" min="3" max="50" required><br>
+		<label for="portfolio"  >Portfolio</label>
+		<input id="portfolio" type="url" required><br>
+		<label for="favColor" >Favorite Color</label>
+		<input id="favColor" type="color"><br>
+		<label for="likeness"  >Likeness</label>
+		<input id="likeness" type="range"  min="1" max="100" >
 	</form>
 	
     <script type="text/javascript" src="./script.js">
