--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<h1>Feedback Form</h1>
 	<form method="post">
 		<label for="name"  >Name</label>
-		<input id="name" type="text" min="3" max="50" required><br>
+		<input id="name" type="text" minlength="3" maxlength="50" required><br>
 		<label for="portfolio"  >Portfolio</label>
 		<input id="portfolio" type="url" required><br>
 		<label for="favColor" >Favorite Color</label>
